--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -1,249 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-    android:background="@color/white"
+<FrameLayout
+    android:id="@+id/fragment_container"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.activities.BookActivity">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp"
-            android:textColor= "#000000"
-
-            android:background="@drawable/card_background">
-
-            <!-- Naslov knjige -->
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="164dp"
-                android:layout_height="109dp"
-                app:srcCompat="@drawable/login" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Naziv:"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="4dp" />
-            <EditText
-                android:id="@+id/etBookTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Unesite naziv knjige"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:background="@drawable/edittext_background"
-                android:layout_marginBottom="8dp" />
-
-            <!-- Autor -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Autor:"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp" />
-            <EditText
-                android:id="@+id/etBookAuthor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Unesite ime autora"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:background="@drawable/edittext_background"
-                android:layout_marginBottom="8dp" />
-
-            <!-- Žanr -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Žanr:"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp" />
-            <EditText
-                android:id="@+id/etBookGenre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Unesite žanr knjige"
-                android:textColor= "#000000"
-
-                android:textSize="16sp"
-                android:background="@drawable/edittext_background"
-                android:layout_marginBottom="8dp" />
-
-            <!-- Nakladnik -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nakladnik:"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp" />
-            <EditText
-                android:id="@+id/etBookPublisher"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Unesite ime nakladnika"
-                android:textColor= "#000000"
-
-                android:textSize="16sp"
-                android:background="@drawable/edittext_background"
-                android:layout_marginBottom="8dp" />
-
-            <!-- Lokacija -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Lokacija:"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp" />
-            <EditText
-                android:id="@+id/etBookLocation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Unesite lokaciju"
-                android:textColor= "#000000"
-
-                android:textSize="16sp"
-                android:background="@drawable/edittext_background"
-                android:layout_marginBottom="8dp" />
-
-            <!-- Dostupno -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Dostupno:"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp" />
-
-            <Switch
-                android:id="@+id/switch1"
-                android:layout_width="117dp"
-                android:layout_height="wrap_content"
-                android:text="Ne/Da"
-                android:textColor="#000000"
-                android:thumbTint="@color/darkBlue"
-                android:trackTint="@color/lightBlue" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Godina izdanja:"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp" />
-            <EditText
-                android:id="@+id/etBookYear"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Unesite godinu izdanja"
-                android:textColor= "#000000"
-
-                android:textSize="16sp"
-                android:inputType="number"
-                android:background="@drawable/edittext_background"
-                android:layout_marginBottom="8dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Jezik izdanja:"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp" />
-            <EditText
-                android:id="@+id/etBookLanguage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Unesite jezik izdanja"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:background="@drawable/edittext_background"
-                android:layout_marginBottom="8dp" />
-
-            <!-- Broj stranica -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Broj stranica:"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp" />
-            <EditText
-                android:id="@+id/etBookPages"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Unesite broj stranica"
-                android:textColor= "#000000"
-
-                android:textSize="16sp"
-                android:inputType="number"
-                android:background="@drawable/edittext_background"
-                android:layout_marginBottom="8dp" />
-
-            <!-- Uvez -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Uvez:"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp" />
-            <EditText
-                android:id="@+id/etBookBinding"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Unesite vrstu uveza"
-                android:textColor= "#000000"
-
-                android:textSize="16sp"
-                android:background="@drawable/edittext_background"
-                android:layout_marginBottom="8dp" />
-
-
-            <!-- Opis -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Opis:"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp" />
-            <EditText
-                android:id="@+id/etBookDescription"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Unesite opis knjige"
-                android:textColor= "#000000"
-                android:textSize="16sp"
-                android:background="@drawable/edittext_background"
-                android:layout_marginBottom="16dp"
-                android:minHeight="100dp"
-                android:gravity="top"
-                android:inputType="textMultiLine" />
-
-            <!-- Kontaktiraj -->
-            <Button
-                android:id="@+id/btnKontaktBook"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:backgroundTint="@color/blue"
-                android:text="Kontaktiraj"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-    </ScrollView>
+    tools:context=".ui.activities.BookActivity"
+    android:layout_height="match_parent" />
