--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
     <color name="darkBlue">#16407a</color>
     <color name="lightBlue">#5a7499</color>
     <color name="light_purple">#d5d1e3</color>
+    <color name="red">#ba1e0d</color>
+    <color name="green">#3b8f3c</color>
 
 
 
