--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Naziv knjige"
+            android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -39,14 +40,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Autor: Ime Prezime"
+            android:textColor="#000000"
             android:textSize="14sp" />
     </LinearLayout>
 
     <!-- Kontaktiraj gumb -->
     <Button
         android:id="@+id/btnContact"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:text="Kontaktiraj" />
+        android:background="?android:attr/selectableItemBackground"
+        android:drawableLeft="@drawable/messagingsmall" />
 </LinearLayout>
