--- a/app/src/main/res/layout/fragment_update_book.xml
+++ b/app/src/main/res/layout/fragment_update_book.xml
@@ -17,23 +17,25 @@ android:padding="16dp"
     <!-- Polja za uređivanje -->
     <ImageView
         android:id="@+id/updateImageView"
-        android:layout_width="164dp"
+        android:layout_width="match_parent"
+        android:background="@drawable/border"
         android:layout_height="109dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Naziv:"
-        android:textColor= "#000000"
+        android:text="@string/naziv"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginBottom="4dp" />
+
     <EditText
         android:id="@+id/etUpdateBookTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Unesite naziv knjige"
-        android:textColor= "#000000"
+        android:hint="@string/unesite_naziv_knjige"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:background="@drawable/edittext_background"
         android:layout_marginBottom="8dp" />
@@ -42,16 +44,17 @@ android:padding="16dp"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Autor:"
-        android:textColor= "#000000"
+        android:text="@string/autor"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginBottom="4dp" />
+
     <EditText
         android:id="@+id/etUpdateBookAuthor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Unesite ime autora"
-        android:textColor= "#000000"
+        android:hint="@string/unesite_ime_autora"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:background="@drawable/edittext_background"
         android:layout_marginBottom="8dp" />
@@ -60,16 +63,17 @@ android:padding="16dp"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Žanr:"
-        android:textColor= "#000000"
+        android:text="@string/zanr"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginBottom="4dp" />
+
     <EditText
         android:id="@+id/etUpdateBookGenre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Unesite žanr knjige"
-        android:textColor= "#000000"
+        android:hint="@string/unesite_zanr_knjige"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:background="@drawable/edittext_background"
         android:layout_marginBottom="8dp" />
@@ -78,16 +82,17 @@ android:padding="16dp"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nakladnik:"
+        android:text="@string/nakladnik"
         android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginBottom="4dp" />
+
     <EditText
         android:id="@+id/etUpdateBookPublisher"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Unesite ime nakladnika"
-        android:textColor= "#000000"
+        android:hint="@string/unesite_ime_nakladnika"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:background="@drawable/edittext_background"
         android:layout_marginBottom="8dp" />
@@ -96,16 +101,17 @@ android:padding="16dp"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lokacija:"
-        android:textColor= "#000000"
+        android:text="@string/lokacija"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginBottom="4dp" />
+
     <EditText
         android:id="@+id/etUpdateBookLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Unesite lokaciju"
-        android:textColor= "#000000"
+        android:hint="@string/unesite_lokaciju"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:background="@drawable/edittext_background"
         android:layout_marginBottom="8dp" />
@@ -114,8 +120,8 @@ android:padding="16dp"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dostupno:"
-        android:textColor= "#000000"
+        android:text="@string/dostupno"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginBottom="4dp" />
 
@@ -123,7 +129,7 @@ android:padding="16dp"
         android:id="@+id/updateSwitch1"
         android:layout_width="117dp"
         android:layout_height="wrap_content"
-        android:text="Ne/Da"
+        android:text="@string/ne_da"
         android:textColor="#000000"
         android:thumbTint="@color/darkBlue"
         android:trackTint="@color/lightBlue" />
@@ -132,16 +138,17 @@ android:padding="16dp"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Godina izdanja:"
-        android:textColor= "#000000"
+        android:text="@string/godina_izdanja"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginBottom="4dp" />
+
     <EditText
         android:id="@+id/etUpdateBookYear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Unesite godinu izdanja"
-        android:textColor= "#000000"
+        android:hint="@string/unesite_godinu_izdanja"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:inputType="number"
         android:background="@drawable/edittext_background"
@@ -151,16 +158,17 @@ android:padding="16dp"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jezik izdanja:"
-        android:textColor= "#000000"
+        android:text="@string/jezik_izdanja"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginBottom="4dp" />
+
     <EditText
         android:id="@+id/etUpdateBookLanguage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Unesite jezik izdanja"
-        android:textColor= "#000000"
+        android:hint="@string/unesite_jezik_izdanja"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:background="@drawable/edittext_background"
         android:layout_marginBottom="8dp" />
@@ -169,16 +177,17 @@ android:padding="16dp"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Broj stranica:"
+        android:text="@string/broj_stranica"
         android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginBottom="4dp" />
+
     <EditText
         android:id="@+id/etUpdateBookPages"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Unesite broj stranica"
-        android:textColor= "#000000"
+        android:hint="@string/unesite_broj_stranica"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:inputType="number"
         android:background="@drawable/edittext_background"
@@ -188,16 +197,17 @@ android:padding="16dp"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Uvez:"
+        android:text="@string/uvez"
         android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginBottom="4dp" />
+
     <EditText
         android:id="@+id/etUpdateBookBinding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Unesite vrstu uveza"
-        android:textColor= "#000000"
+        android:hint="@string/unesite_vrstu_uveza"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:background="@drawable/edittext_background"
         android:layout_marginBottom="8dp" />
@@ -207,16 +217,17 @@ android:padding="16dp"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Opis:"
-        android:textColor= "#000000"
+        android:text="@string/opis"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginBottom="4dp" />
+
     <EditText
         android:id="@+id/etUpdateBookDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Unesite opis knjige"
-        android:textColor= "#000000"
+        android:hint="@string/unesite_opis_knjige"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:background="@drawable/edittext_background"
         android:layout_marginBottom="16dp"
@@ -229,17 +240,25 @@ android:padding="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <Button
-        android:id="@+id/btnSaveChanges"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Spremi promjene" />
 
-    <Button
-        android:id="@+id/btnCancelUpdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Odustani" />
+        <Button
+            android:id="@+id/btnSaveChanges"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:text="@string/spremi_promjene" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/btnCancelUpdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="@string/odustani_update" />
 
     </LinearLayout>
 </LinearLayout>
