--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -12,7 +12,11 @@
         android:orderInCategory="2"
         android:title="Moje knjige" />
     <item
-        android:id="@+id/odjava"
+        android:id="@+id/chat"
         android:orderInCategory="3"
+        android:title="Razgovori" />
+    <item
+        android:id="@+id/odjava"
+        android:orderInCategory="4"
         android:title="Odjava" />
 </menu>
